--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+beautifulsoup4==4.9.1
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
 Flask-PyMongo==2.3.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+gitdb==4.0.5
+GitPython==3.1.11
 Jinja2==2.11.2
-pymongo==3.11.2
-regex==2020.11.13
-requests==2.25.0
-splinter==0.14.0
-gunicorn==19.9.0
+Js2Py==0.70
+json5==0.9.5
+jsonschema==3.2.0
+numpy==1.19.5
+pandas==0.24.1
+plotly==4.14.1
+psycopg2==2.8.6
+python-dateutil==2.8.1
+Django==2.1.7
+requests==2.21.0
+requests-oauthlib==1.3.0
 SQLAlchemy==1.2.18
+validators==0.18.2
+WTForms==2.3.3
+yahoo-finance==1.4.0
+gunicorn==19.9.0
