--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,9 @@
-beautifulsoup4==4.9.1
-Flask-SQLAlchemy==2.4.4
-json5==0.9.5
-jsonschema==3.2.0
-pandas==0.24.1
-plotly==4.14.1
-Django==2.1.7
-SQLAlchemy==1.2.18
 Flask==1.1.2
 Flask-Bootstrap==3.3.7.1
 Flask-PyMongo==2.3.0
 Jinja2==2.11.2
 pymongo==3.11.2
+regex==2020.11.13
 requests==2.25.0
 splinter==0.14.0
 gunicorn==19.9.0
